@@ -26,8 +26,8 @@
 -- For Release --
 
     sound on link clicks
+    rework how to know if there are more pages or not
 
     Version 2.2.0
         - Scheduled Tweets
-        - Direct Message pictures
         - mute users for a time period
