@@ -32,6 +32,14 @@
         android:visibility="gone"
         />
 
+    <ImageView
+        android:id="@+id/attached_image"
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:scaleType="fitCenter"
+        android:padding="10dp"
+        android:visibility="gone"/>
+
     <LinearLayout
         android:id="@+id/bottom_bar"
         android:layout_width="match_parent"
