@@ -1,0 +1,8 @@
+<?xml version="1.0" encoding="utf-8"?>
+
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id="@+id/menu_attach_picture"
+        android:orderInCategory="1"
+        android:title="@string/menu_attach_picture"
+        android:showAsAction="never" />
+</menu>
