@@ -90,6 +90,7 @@ public class DMDataSource {
         values.put(DMSQLiteHelper.COLUMN_RETWEETER, status.getRecipientScreenName());
         values.put(DMSQLiteHelper.COLUMN_EXTRA_ONE, status.getRecipient().getBiggerProfileImageURL());
         values.put(DMSQLiteHelper.COLUMN_EXTRA_TWO, status.getRecipient().getName());
+        values.put(HomeSQLiteHelper.COLUMN_PIC_URL, TweetLinkUtils.getHtmlStatus(status)[1]);
 
         MediaEntity[] entities = status.getMediaEntities();
 
