@@ -1,7 +1,9 @@
 <b>Version 2.2.0:</b><br/><br/>
+    &#8226; New draft system for composing tweets<br/>
+    &#8226; Send pictures though direct messages with TwitPic<br/>
     &#8226; Seperate options for in app browser from timeline and on tweets<br/>
     &#8226; Better handling of refreshing tweets, taking into account the mutes<br/>
-    &#8226; Live Streaming of mentions<br/>
+    &#8226; Live streaming of mentions<br/>
 </br><br/>
 
 <b>Version 2.1.6:</b><br/><br/>
